2003-02-03  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* vipmap-to-authmap: New script from Jesse Guardiani for
	converting vpopmail 'vipmap' output into tmda-ofmipd's 'ipauthmap'
	file.

2003-02-03  Tim Legant  <tim@catseye.net>

	* vpopmail-vdir.sh (VUSERINFO): Changed the path from a hard-coded
	/home/vpopmail to ~vpopmail.  This should work on most systems,
	regardless of where vpopmail is installed.

2003-01-20  Tim Legant  <tim@catseye.net>

	* vmailmgr-vdir.sh: Script to print virtual email user's homedir.
	Works with the VMailMgr virtual domain add-on to qmail.

	* vpopmail-vdir.sh: Script to print virtual email user's homedir.
	Works with the VPopMail virtual domain add-on to qmail.

2002-11-13  Josh  <huber@alum.wpi.edu>

	* tmda.el: Made the changelist processing faster.

2002-11-13  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* sample.tmdarc: Renamed sample.config.

2002-11-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* collectaddys (addys): Remove Python 2.0 compatibility, and also
	Reply-To from list of default headers to scan.

2002-10-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* def2html: New file.

2002-07-31  Josh  <huber@alum.wpi.edu>

	* tmda.el (tmda-addr-at-point): Fixed regexp
	* tmda.el (tmda-pending-summary-args): Changed default to terse.
	* tmda.el (tmda-pending-truncate-lines): New.
	* tmda.el (tmda-pending-show): Use truncate option during buffer
	display.

2002-07-26  Josh  <huber@alum.wpi.edu>

	* tmda.el: Misc Fixes, also add tmda-pending-count
	* tmda.el (tmda-addr-at-point):
	* tmda.el (tmda-pending-apply-changes): Update pending count
	* tmda.el (tmda-pending-count): New.
	* tmda.el (tmda-pending-update-count): New.

2002-07-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* qmail-smtpd_auth.patch: Removed.

	* README.RELAY: Removed.

2002-05-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* sample.tmdarc: Remove CRYPT_KEY.
